<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="Mandatory">
    
        <EditTextPreference
                android:key="@string/url_key"
                android:title="@string/url_title"
                android:summary="@string/url_summary"
                android:dialogTitle="@string/url_dialogtitle"
        		android:defaultValue="@string/url_defaultvalue" />
                
        <EditTextPreference
                android:key="@string/name_key"
                android:title="@string/name_title"
                android:summary="@string/name_summary"
                android:dialogTitle="@string/name_dialogtitle"
                android:defaultValue="@string/name_defaultvalue" />
                
        <EditTextPreference
                android:key="@string/username_key"
                android:title="@string/username_title"
                android:summary="@string/username_summary"
                android:dialogTitle="@string/username_dialogtitle" />

        <EditTextPreference
			  	android:password="true"
                android:key="@string/password_key"
                android:title="@string/password_title"
                android:summary="@string/password_summary"
                android:dialogTitle="@string/password_dialogtitle" />
                
    </PreferenceCategory>

    <PreferenceCategory
            android:title="Optional">

		<ListPreference
	            android:key="@string/frequency_key"
	            android:defaultValue="0"
	            android:title="@string/frequency_title"
	            android:summary="@string/frequency_summary"
	            android:entries="@array/frequency_names"
	            android:entryValues="@array/frequency_values"
	            android:dialogTitle="@string/frequency_dialogtitle" />

		<ListPreference
	            android:key="@string/timezoneadj_key"
	            android:defaultValue="0"
	            android:title="@string/timezoneadj_title"
	            android:summary="@string/timezoneadj_summary"
	            android:entries="@array/timezoneadj_names"
	            android:entryValues="@array/timezoneadj_values"
	            android:dialogTitle="@string/timezoneadj_dialogtitle" />

        <CheckBoxPreference
                android:key="@string/alwaysshowcount_key"
                android:title="@string/alwaysshowcount_title"
                android:summary="@string/alwaysshowcount_summary" />

        <CheckBoxPreference
                android:key="@string/dontcheckemail_key"
                android:title="@string/dontcheckemail_title"
                android:summary="@string/dontcheckemail_summary" />

        <CheckBoxPreference
                android:key="@string/dontcheckcalendar_key"
                android:title="@string/dontcheckcalendar_title"
                android:summary="@string/dontcheckcalendar_summary" />

        <CheckBoxPreference
                android:key="@string/internalviewer_key"
                android:title="@string/internalviewer_title"
                android:summary="@string/internalviewer_summary" />

        <CheckBoxPreference
                android:key="@string/defaultwhitebg_key"
                android:title="@string/defaultwhitebg_title"
                android:summary="@string/defaultwhitebg_summary" />

        <CheckBoxPreference
                android:key="@string/onlyoverwifi_key"
                android:title="@string/onlyoverwifi_title"
                android:enabled="false"
                android:summary="@string/onlyoverwifi_summary" />

	</PreferenceCategory>

    <PreferenceCategory
            android:title="Advanced">
    
        <EditTextPreference
                android:key="@string/inbox_key"
                android:title="@string/inbox_title"
                android:summary="@string/inbox_summary"
                android:dialogTitle="@string/inbox_dialogtitle"
                android:defaultValue="@string/inbox_defaultvalue" />
                
        <EditTextPreference
                android:enabled="false"
                android:key="@string/calendar_key"
                android:title="@string/calendar_title"
                android:summary="@string/calendar_summary"
                android:dialogTitle="@string/calendar_dialogtitle" />

    </PreferenceCategory>

</PreferenceScreen>
